[package]
name = "manytokens"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
url = "2"
anyhow = "1"
serde_json = "1"
